--- a/main.css
+++ b/main.css
@@ -48,9 +48,26 @@ label {
 }
 
 #cards {
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
   width: 900px;
   max-width: 90%;
   margin: 10px auto;
+}
+
+.bearCard {
+  margin:5px;
+}
+
+.bearCardImg {
+  max-height: 150px;
+}
+
+.clickFish {
+  cursor: pointer;
+}
+
+.fas {
+  pointer-events: none;
 }
